# GameIdeaGenerator

./: .gitignore  Cargo.toml  LICENSE  README.md  data.json  gameIdeaGenerator.html  gameIdeaGenerator.js
src/: common.rs  lib.rs  main.rs
