[package]
name = "game_idea_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.6.0"
yansi = "0.5.1"
chrono = "0.4.23"
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
structopt = "0.3.26"
reqwest = "0.11"