[package]
name = "game_idea_generator"
version = "0.1.0"
edition = "2021"

# [dependencies]
# egg-mode = "0.16"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# rand = "0.6.0"
# yansi = "0.5.1"
# chrono = "0.4.23"
# tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
# structopt = "0.3.26"
# reqwest = "0.11"

[lib]
name = "game_idea_generator"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
# rand = "0.6.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html